Corrigir UI GM e players no plugin Cutscene

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       const video = document.getElementById("cutsceneVideo");
       const videoContainer = document.getElementById("videoContainer");
 
-      // Mostrar UI certa para GM e Players
+      // Mostra interface certa para GM e Players
       if (isHost) {
         gmUI.style.display = "block";
         playerUI.style.display = "none";
@@ -62,7 +62,7 @@
         playerUI.style.display = "block";
       }
 
-      // Limpar input e esconder vídeo para players
+      // Limpa input e esconde vídeo para players
       if (!isHost) {
         input.value = "";
         videoContainer.style.display = "none";
@@ -70,7 +70,7 @@
         video.src = "";
       }
 
-      // GM clica no botão para lançar cutscene
+      // GM lança cutscene
       launchBtn.addEventListener("click", () => {
         const url = input.value.trim();
         if (!url.endsWith(".mp4")) {
@@ -80,7 +80,7 @@
         cutsceneState.set(url);
       });
 
-      // Atualizar vídeo para todos quando o estado mudar
+      // Quando o estado muda, todos atualizam o vídeo
       cutsceneState.subscribe(url => {
         if (!url) {
           video.pause();
