Corrige visibilidade GM/Player no Cutscene plugin com CSS e JS

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>CUTSCENE Plugin - Teste</title>
+  <title>CUTSCENE</title>
   <link rel="stylesheet" href="style.css" />
   <style>
     #gmUI, #playerUI {
@@ -23,16 +23,16 @@
   </style>
 </head>
 <body>
-  <h1>🎬 CUTSCENE TEST</h1>
+  <h1>🎬 CUTSCENE VIEWER</h1>
 
   <div id="gmUI">
     <input id="videoURL" placeholder="Cola aqui o link do vídeo (.mp4 público)" />
     <br />
-    <button id="launchBtn">Lançar Cutscene</button>
+    <button id="launchBtn">Começar Cutscene</button>
   </div>
 
   <div id="playerUI">
-    <p>Espera pelo mestre lançar a cutscene...</p>
+    <p>Espera que o mestre meta a cutscene...</p>
   </div>
 
   <div id="videoContainer">
