Adicionar log de isHost para debug

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
   (async () => {
     const { isHost } = await getContext();
+    console.log("É GM?", isHost);
     const cutsceneState = useSyncState("cutscene-video", null);
 
     const gmUI = document.getElementById("gmUI");
