Usar unpkg.com para importar SDK v2 do Owlbear

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </div>
 
   <script type="module">
-  import { getContext, useSyncState } from "https://cdn.jsdelivr.net/npm/@owlbear-rodeo/sdk@2/dist/sdk.mjs";
+  import { getContext, useSyncState } from "https://unpkg.com/@owlbear-rodeo/sdk@2/dist/sdk.mjs";
 
   (async () => {
     const { isHost } = await getContext();
