Usar link CORS-safe para SDK do Owlbear

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </div>
 
   <script type="module">
-  import { getContext, useSyncState } from "https://unpkg.com/@owlbear-rodeo/sdk@2/dist/sdk.mjs";
+  import { getContext, useSyncState } from "https://esm.sh/@owlbear-rodeo/sdk@2";
 
   (async () => {
     const { isHost } = await getContext();
