--- a/cutscene.html
+++ b/cutscene.html
@@ -40,7 +40,7 @@
   </div>
 
   <script type="module">
-  import { getContext, useSyncState } from "https://esm.sh/@owlbear-rodeo/sdk@2";
+  import { getContext, useSyncState } from "https://esm.sh/@owlbear-rodeo/sdk@2?bundle";
 
   (async () => {
     const { isHost } = await getContext();
