--- a/cutscene.html
+++ b/cutscene.html
@@ -40,8 +40,8 @@
   </div>
 
   <script type="module">
-  import sdk from "https://esm.sh/@owlbear-rodeo/sdk@2?bundle";
-const { getContext, useSyncState } = sdk;
+  import { getContext, useSyncState } from "https://esm.sh/@owlbear-rodeo/sdk@2?bundle";
+
   (async () => {
     const { isHost } = await getContext();
     console.log("É GM?", isHost);
