--- a/cutscene-v2.html
+++ b/cutscene-v2.html
@@ -40,7 +40,7 @@
   </div>
 
   <script type="module">
-  import sdk from "https://esm.sh/@owlbear-rodeo/sdk@2?bundle";
+  import sdk from "https://cdn.jsdelivr.net/npm/@owlbear-rodeo/sdk@2";
 const { getContext, useSyncState } = sdk;
   (async () => {
     const { isHost } = await getContext();
