Corrigir import com index.module.js definitivo

--- a/cutscene-v2.html
+++ b/cutscene-v2.html
@@ -40,7 +40,7 @@
   </div>
 
   <script type="module">
-    import * as sdk from "https://cdn.jsdelivr.net/npm/@owlbear-rodeo/sdk@2/dist/index.js";
+    import sdk from "https://cdn.jsdelivr.net/npm/@owlbear-rodeo/sdk@2/dist/index.module.js";
     const { getContext, useSyncState } = sdk;
 
     (async () => {
