Corrigir importação do SDK e atualizar cutscene-v2.html

--- a/cutscene-v2.html
+++ b/cutscene-v2.html
@@ -40,8 +40,8 @@
   </div>
 
   <script type="module">
-    import sdk from "https://cdn.jsdelivr.net/npm/@owlbear-rodeo/sdk@2/dist/index.module.js";
-    const { getContext, useSyncState } = sdk;
+   import sdk from "https://cdn.jsdelivr.net/npm/@owlbear-rodeo/sdk@2";
+const { getContext, useSyncState } = sdk;
 
     (async () => {
       const { isHost } = await getContext();
